# lab4-16var

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: array.h  figure.h  octagon.h  point.h  square.h  triangle.h
